--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /Go_Fish/.vs/Go_Fish/v16/Server/sqlite3/db.lock
+/Go_Fish/.vs/Go_Fish/v16/Server/sqlite3/storage.ide
+/Go_Fish/.vs/Go_Fish/v16/Server/sqlite3/storage.ide-shm
+/Go_Fish/.vs/Go_Fish/v16/Server/sqlite3/storage.ide-wal
+/Go_Fish/.vs/Go_Fish/v16
+/.vs
